List all stubs of landmark research

--- a/neuroevolution_of_augmenting_topologies_paper_3.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_3.tex
@@ -139,23 +139,19 @@ A short listing of landmark research in the field of neuroevolution will close t
 
 \paragraph{CoDeepNEAT} By Miikkulainen, Liang, et al in 2017 [cite]. Applys NEAT to Deep Neural Network with genes representing layers instead of nodes and connections. Repeated Components (as applied in ResNET, GoogleNET, etc), topologies and hyperparameters are then evolved competitively. Around this time did the consensus emerge to use backpropagation to evolve weights and evolution to evolve topology, though a mixture of both is most often applied.
 
-\paragraph{Large-Scale Evolution of Image Classifiers} By Real, Moore, et al in 2017 [cite]. Introduction of tournament selection for massive parallelization 
-
-
-real17 (2017)
+\paragraph{Large-Scale Evolution of Image Classifiers} By Real, Moore, et al in 2017 [cite].
 % Include progress picture of the population of image classifier over time
 
-EvoCNN (2017)
-% Sun, Xue - Evolving Deep Convolutional Neural Networks for Image classification
-% see innovex summary
+\paragraph{EvoCNN} By Sun, Xue, et al in 2017 [cite].
 
-Uber Research (End 2017 / more in 2018)
+\paragraph{Deep Neuroevolution} By Uber-Research in 2017 [cite].
 
-liu18 (2018)
+\paragraph{Hierarchical Representations for Efficient Architecture Search} By Liu, Simonyan, et al in 2018 [cite]
 
-real19 (2019)
-
+\paragraph{Regularized Evolution for Image Classifier Architecture Search} By Real, Aggarwal, et al in 2019 [cite]
 % Include the comparison picture of NE vs RL vs RS
+
+
 
 % Mention move from Fixed-Topology NNs to TWEANNs and how nowadays SGD like backpropagation is generally preferred for weight adaptation, though currenlty there is a consesus in the neuroevolution community thata combined approach is the most promising (Evolce and Transfer weights roughly, finetun with SGD) [when did that conensus change happen?]
 
