Write introduction to NEAT chapter

--- a/neuroevolution_of_augmenting_topologies_paper_3.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_3.tex
@@ -163,20 +163,19 @@ A short listing of landmark research in the field of neuroevolution will close t
 
 % Read papers sta02_1, sta02_2, sta04 again
 
-<Section Introduction>
+In 2002, then PhD-student Kenneth O.Stanley and Risto Miikkulainen at the University of Texas at Austin co-published an approach to neuroevolution they called \textit{Neuroevolution of Augmenting Topologies} (short form: NEAT) in their paper "Evolving Neural Networks through Augmenting Topologies" [cite]. They followed up on its theory in a subsequent ablation study for NEATs components in the same year and eventually Stanley's PhD thesis "Efficient Evolution of Neural Networks through Complexification" in 2004 [cite].
 
-Neuroevolution of Augmenting Topologies (short form: NEAT) was first introduced in the paper "Evolving Neural Networks through Augmenting Topologies" by Kenneth O.Stanley and Risto Miikkulainen in the year 2002. [cite] It was finalized and shown to be superior to any preceding neuroevolution algorithm in Stanley's PhD thesis "Efficient Evolution of Neural Networks through Complexification" in 2004. [cite]
-
-
-
-At time of envisioning of NEAT was Neuroevolution most promising learning approach. Still is powerful today (see rea17/19)
-"NE is a promising approach to learning behavioral policies and finds solutions faster than leading RL methods on many benchmark tasks (Gomez 2003; Moriarty and Miikkulainen 1997)" \cite{sta04}
+At the time of envisionment was NEAT considered one of the most promising approaches to ANN learning and it is still considered a viable approach and a benchmark algorithm in many neuroevolution frameworks to this day. The first section in this chapter will outline what aspects of NEAT set it apart from preceding research and enabled its leap in performance, which will be looked upon in the second section. This chapter closes with a short overview of variants, advancements and direct descendants of the NEAT algorithm.
 
 
-"In highly complex domains the heuristics for determining the appropriate size are not very useful, and it becomes increasingly difficult to solve such domains with fixed-length encodings." \cite{sta04}
+
+
 
 [See all notes write down about stanleys PhD thesis]
 
+"In highly complex domains the heuristics for determining the appropriate size are not very useful, and it becomes increasingly difficult to solve such domains with fixed-length encodings." \cite{sta04}
+
+"NE is a promising approach to learning behavioral policies and finds solutions faster than leading RL methods on many benchmark tasks (Gomez 2003; Moriarty and Miikkulainen 1997)" \cite{sta04}
 
 
 
